@@ -4,7 +4,7 @@ import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 import org.springframework.web.servlet.i18n.AcceptHeaderLocaleResolver;
 
-import javax.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletRequest;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
@@ -13,7 +13,7 @@ import java.util.Optional;
 @Component
 public class LocaleResolver extends AcceptHeaderLocaleResolver {
 
-    private static final Locale DEFAULT_LOCALE = new Locale("pt", "BR");
+    private static final Locale DEFAULT_LOCALE = Locale.of("pt", "BR");
 
     private static final List<Locale> ACCEPTED_LOCALES = Arrays.asList(
 
